fixed right-about-heading to align center in mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,78 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 * {
-    margin:0;
-    padding:0;
-    border:none;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 body {
-    font-family:Lato, sans-serif;
-    font-weight:300;
-    color:#3a3a3a;
+    font-family: Lato, sans-serif;
+    font-weight: 300;
+    color: #3a3a3a;
 }
 
 /* headings and logo */
 
 h1, h2 {
-    font-family: Oswalt, sans-serif;
-    text-transform:uppercase;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
     letter-spacing: 4px;
-    color: #3a3a3a;
+    color: #252525;
 }
+
 #logo {
-    float:left;
-    font-size:280%;
+    float: left;
+    font-size: 280%;
     margin-left: 30px;
+}
+
+/* navigation links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
 }
 
 #menu, #logo {
     line-height: 75px;
 }
 
-#menu {
-    font-size:110%;
-    letter-spacing: 4px;
-}
 #menu li {
     float: right;
     list-style-type: none;
     margin-right: 30px;
 }
+
 #menu a {
     text-decoration: none;
-    color:inherite;
+    color: inherit;
 }
+
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
+
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
-/* hero image and cover text*/
 
-#cover-text, #cover-text h2 {
-    color:#fff;
-}
+/* hero image and cover text */
+
 #hero-outer {
     height: 600px;
-    width:100%;
-    overflow:hidden;
+    width: 100%;
+    overflow: hidden;
+
     position: relative;
 }
+
+#cover-text, #cover-text h2 {
+    color: #fff;
+}
+
 #hero-image {
     height: 600px;
-    width:100%;
+    width: 100%;
     background: url('../images/hero-image.webp') no-repeat center center;
 
-      /* animates zoom effect on loading page */
-      animation-name: hero-zoom;
-      animation-duration: 5s;
-      animation-fill-mode: forwards;
+    /* animates zoom effect on loading page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 }
-    
-/* creates the level of zoom for hero image */
 
+/* creates the level of zoom for hero image */
 @keyframes hero-zoom {
     from{
         transform: scale(1);
@@ -81,25 +91,28 @@ h1, h2 {
         transform: scale(1.1);
     }
 }
+
 #cover-text {
     font-size: 130%;
-    font-family: Oswalt, sans-serif;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
 
-    width:300px;
+    width: 300px;
     height: 200px;
 
     padding-top: 40px;
     padding-left: 10px;
 
     background-color: rgba(241, 109, 107, .7);
-    bottom: 30px;
-    right:150px;
 
-    position:absolute;
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
-/* club ethos*/
+
+/* club ethos */
 
 #club-ethos {
     height: 600px;
@@ -107,75 +120,88 @@ h1, h2 {
 
 #left-about {
     padding-top: 30px;
-    width:33%;
+    width: 33%;
     float: left;
 }
+
 #right-about {
     padding-top: 30px;
     width: 33%;
-    float:right;
+    float: right;
 }
+
 #center-about {
-    width:33%;
-    margin:0 auto;
+    width: 33%;
+    margin: 0 auto;
 }
+
 hr {
-    border:1px solid #3a3a3a;
+    border-top: 1px solid #3a3a3a;
     width: 100%;
-    margin:5px;
+    margin: 5px 0;
 }
+
 .left-about-heading {
     width: 60%;
-    float:right;
+    float: right;
     line-height: 20px;
-    clear:both;
+    clear: both;
     margin-bottom: 50px;
 }
+
 .right-about-heading {
     width: 60%;
-    float:left;
+    float: left;
     line-height: 20px;
-    clear:both;
+    clear: both;
     margin-bottom: 50px;
 }
-#right-about h2 {
+
+.right-about-heading h2 {
     text-align: right;
 }
-#right-about p {
+
+.right-about-heading p {
     text-align: right;
 }
+
 #welcome {
     text-align: center;
-    margin:20px 0;
+    margin: 20px 0;
     font-size: 280%;
 }
+
 #circle-container {
-    width:300px;
-    height:300px;
-    padding:30px;
-    border-style:solid;
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
     border-color: #ccc;
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
+
 #circle-cover-bg {
     background: url('../images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
+
 /* event times */
+
 #times {
-    background: url('../images/dublin-city.webp');
+    background-image: url('../images/times-background.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width:100%;
+    width: 100%;
     overflow: hidden;
 }
+
 #times div {
-    color:#fafafa;
-    background-color: rgba(0, 0, 0, 0.6);
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
     width: 20%;
     height: 300px;
     float: left;
@@ -184,30 +210,41 @@ hr {
     border: 2px solid white;
     box-sizing: border-box;
 }
+
 #times h2 {
     color: #fafafa;
 }
+
+/* footer */
+
 footer {
     height: 150px;
 }
+
 .social-networks {
     text-align: center;
 }
-.social-networks li {
-    display:inline;
+
+.social-networks > li {
+    display: inline;
 }
+
 .social-networks i {
-    font-size:160%;
-    padding:5%;
-    margin:1%;
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
     color: #3a3a3a;
 }
+
+/* gallery */
+
 #photos {
     clear: both;
     line-height: 0;
     column-count: 4;
     column-gap: 0;
 }
+
 #photos > img {
     width: 100%;
 }
@@ -239,10 +276,11 @@ footer {
         float: left;
         padding: 0;
     }
+
     #times > div {
         width: 100%;
-        clear:both;
-        height:150px;
+        clear: both;
+        height: 150px;
         padding: 0;
     }
 
@@ -285,9 +323,11 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
+
     #photos {
         column-count: 3;
     }
+
 }
 @media screen and (max-width:800px){
     #photos {
